Improve method names

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
       </template>
     </div>
     <p class="card-slot__counter">
-      <span x-text="remainingCards()"></span> left in the deck
+      <span x-text="numRemainingCards()"></span> left in the deck
     </p>
   </div>
   <nav>
