--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,17 @@
   <nav>
     <button x-data class="btn" @click="pickRandomCard()">🎲</button>
   </nav>
+
+  <footer class="credits">
+    <a href="https://github.com/muchzill4"><img class="credits__logo" src="assets/mc4-logo.svg" alt="muchzill4"
+        height="25" /></a>
+    got inspired by
+    <a href="https://www.cardsagainsthumanity.com"><img class="credits__logo" src="assets/cah-logo.png"
+        alt="Cards Against Humanity" height="25" /></a>
+    and
+    <a href="https://www.boxuk.com/insight/retros-against-humanity/"><img class="credits__logo"
+        src="assets/boxuk-logo.svg" alt="Box UK" height="25" /></a>
+  </footer>
 </body>
 
 </html>
