Remove obsolete x-data

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
     </p>
   </div>
   <nav>
-    <button x-data class="btn" @click="pickRandomCard()">🎲</button>
+    <button class="btn" @click="pickRandomCard()">🎲</button>
   </nav>
 
   <footer class="credits">
