Perhaps multiple answers is more descriptive

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
             <p class="card__question">Retros Against Humanity</p>
             <ol class="card__rules">
               <li>🎲 Draw a card</li>
-              <li>✍️ Jot down your answer</li>
+              <li>✍️ Jot down your answers</li>
               <li>👍 Choose the winner</li>
               <li>💬 Discuss the winning answer</li>
             </ol>
