Footer link to repo directly

--- a/src/index.html
+++ b/src/index.html
@@ -48,8 +48,8 @@
   </main>
 
   <footer class="credits">
-    <a href="https://github.com/muchzill4"><img class="credits__logo" src="assets/mc4-logo.svg" alt="muchzill4"
-        height="25" /></a>
+    <a href="https://github.com/muchzill4/retros-against-humanity"><img class="credits__logo" src="assets/mc4-logo.svg"
+        alt="muchzill4" height="25" /></a>
     got inspired by
     <a href="https://www.cardsagainsthumanity.com"><img class="credits__logo" src="assets/cah-logo.png"
         alt="Cards Against Humanity" height="25" /></a>
